<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <variable
            name="model"
            type="com.ezlo.testtask.db.model.DeviceDbModel">
        </variable>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <ImageView
            android:id="@+id/ivDevice"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/device"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@{model.deviceName}"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/ivDevice"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tvSN"/>

        <TextView
            android:id="@+id/tvSN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvName"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <TextView
            android:id="@+id/tvSnNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(model.pkDevice)}"
            app:layout_constraintBottom_toBottomOf="@+id/tvSN"
            app:layout_constraintStart_toEndOf="@+id/tvSN"
            app:layout_constraintTop_toTopOf="@+id/tvSN" />

        <ImageView
            android:id="@+id/ivArrow"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/chevron_right" />

        <ImageButton
            android:id="@+id/btn_edit"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@android:drawable/ic_menu_edit"
            android:contentDescription="@string/edit_item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ivArrow"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>